Add half of Menyoo scripts with modifications. * I have added a lot of scripts from Menyoo. * Also, I have modified some of these files so this project will build with them. * Disabled some code with _DISABLED_CODE preprocessor * Add readme to Scripting folder
* Add some enums from Menyoo to Enums.h.
* Add PlayerNoClip for use later.
* Add MENYOO_SCRIPT_FILES preprocessor.
* Disable some code in LuaManager.cpp.
* Add blank pch.cpp file possibly for later.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -129,6 +129,8 @@
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="ImageDimensions.cpp" />
     <ClCompile Include="KCMenuScript.cpp" />
+    <ClCompile Include="Memory\GTAmemory.cpp" />
+    <ClCompile Include="Memory\Hooking.cpp" />
     <ClCompile Include="Memory\Hooks\HandleToEntityStructHook.cpp" />
     <ClCompile Include="Memory\Hooks\ScriptThreadRunHook.cpp" />
     <ClCompile Include="Memory\Memory.cpp" />
@@ -138,16 +140,27 @@
     <ClCompile Include="Natives\natives2.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="Scripting\GTAblip.cpp" />
+    <ClCompile Include="Scripting\GTAentity.cpp" />
+    <ClCompile Include="Scripting\GTAplayer.cpp" />
+    <ClCompile Include="Scripting\Model.cpp" />
+    <ClCompile Include="Scripting\Raycast.cpp" />
+    <ClCompile Include="Scripting\Rope.cpp" />
+    <ClCompile Include="Scripting\Scaleform.cpp" />
+    <ClCompile Include="Scripting\Tasks.cpp" />
     <ClCompile Include="Scripts\MiscScripts.cpp" />
     <ClCompile Include="Scripts\PedScripts.cpp" />
     <ClCompile Include="Scripts\PlayerScripts.cpp" />
+    <ClCompile Include="Scripts\Player\PlayerNoClip.cpp" />
     <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
     <ClCompile Include="Teleports\TeleportLocations.cpp" />
     <ClCompile Include="Util\FileFunctions.cpp" />
+    <ClCompile Include="Util\GTAmath.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
     <ClCompile Include="Util\PoolSpawner.cpp" />
+    <ClCompile Include="Util\StringManip.cpp" />
     <ClCompile Include="Util\UI.cpp" />
     <ClCompile Include="Util\Util.cpp" />
   </ItemGroup>
@@ -183,7 +196,9 @@
     <ClInclude Include="KCMenuScript.hpp" />
     <ClInclude Include="Lib\scrThread.h" />
     <ClInclude Include="Memory\Entity.h" />
+    <ClInclude Include="Memory\GTAmemory.h" />
     <ClInclude Include="Memory\Handle.h" />
+    <ClInclude Include="Memory\Hooking.h" />
     <ClInclude Include="Memory\Hooks\HandleToEntityStructHook.h" />
     <ClInclude Include="Memory\Hooks\Hook.h" />
     <ClInclude Include="Memory\Hooks\ScriptThreadRunHook.h" />
@@ -198,10 +213,19 @@
     <ClInclude Include="Natives\natives2.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Script.hpp" />
+    <ClInclude Include="Scripting\GTAblip.h" />
+    <ClInclude Include="Scripting\GTAentity.h" />
+    <ClInclude Include="Scripting\GTAplayer.h" />
+    <ClInclude Include="Scripting\Model.h" />
+    <ClInclude Include="Scripting\Raycast.h" />
+    <ClInclude Include="Scripting\Rope.h" />
+    <ClInclude Include="Scripting\Scaleform.h" />
+    <ClInclude Include="Scripting\Tasks.h" />
     <ClInclude Include="ScriptMenu.hpp" />
     <ClInclude Include="Scripts\MiscScripts.h" />
     <ClInclude Include="Scripts\PedScripts.h" />
     <ClInclude Include="Scripts\PlayerScripts.h" />
+    <ClInclude Include="Scripts\Player\PlayerNoClip.h" />
     <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
@@ -209,12 +233,14 @@
     <ClInclude Include="Util\EntityIterator.h" />
     <ClInclude Include="Util\Enums.h" />
     <ClInclude Include="Util\FileFunctions.h" />
+    <ClInclude Include="Util\GTAmath.h" />
     <ClInclude Include="Util\Hash.h" />
     <ClInclude Include="Util\Logger.hpp" />
     <ClInclude Include="Util\Model.h" />
     <ClInclude Include="Util\Paths.hpp" />
     <ClInclude Include="Util\PoolSpawner.h" />
     <ClInclude Include="Util\Random.h" />
+    <ClInclude Include="Util\StringManip.h" />
     <ClInclude Include="Util\UI.hpp" />
     <ClInclude Include="Util\Util.hpp" />
     <ClInclude Include="Util\Vehicle.h" />
