Add controller support to menu * To toggle menu with Xbox controller: Press RB + DPAD-Down. * Add toggle for making peds in the area drive with the rushed driving style (isCrazyPedDrivingEnabled bool).
* Slightly modify SetPlayerCoords to teleport the player with the vehicle, credit to Chaos Mod for some of this code.

--- a/GTAV_dir/KCTrainerV/settings_menu.ini
+++ b/GTAV_dir/KCTrainerV/settings_menu.ini
@@ -1,4 +1,6 @@
 ﻿[MENU]
+; Control list for these:
+; https://docs.fivem.net/docs/game-references/controls/
 ; Menyoo Spooner mode conflicts with F9
 ; MenuKey = F9
 MenuKey = F10
@@ -10,8 +12,13 @@ MenuSelect = RETURN
 MenuCancel = BACKSPACE
 MenuX = 0.000000
 MenuY = 0.000000
-ControllerButton1 = -1
-ControllerButton2 = -1
+; Hmm, this has built in support for contollers? How neat
+; RB on Xbox controller, INPUT_COVER
+ControllerButton1 = 44
+; DPAD-Down on Xbox controller, INPUT_CHARACTER_WHEEL
+ControllerButton2 = 19
+;ControllerButton1 = -1
+;ControllerButton2 = -1
 CheatString = menuexample
 
 [Title Text]
