Separate out player menu into PlayerMenu file. * Fix Hash.h, now it works in more then one file.
* Add Richard's Majestic Movie Studio to teleports.
* Add option to spawn into vehicle in menu.

* Add GetWaypointCoords function into PlayerScripts.
* Add option to teleport to waypoint coords in menu.

* Added PlayerMenu files to separate out the player menu functions, old code is still in place for now in KCMainMenu.
* Add MOVE_PLAYER_MENU preprocessor, can be toggled if my new changes break the menu.

* Added TODO.md which will contain my progress and what I am working on so far in this menu.
* Remove old contents out of CHANGELOG.md

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Memory\Memory.cpp" />
     <ClCompile Include="Menus\KCMainMenu.cpp" />
     <ClCompile Include="Menus\OldMenus.cpp" />
+    <ClCompile Include="Menus\PlayerMenu.cpp" />
     <ClCompile Include="MenuTexture.cpp" />
     <ClCompile Include="Natives\natives2.cpp" />
     <ClCompile Include="pch.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="Memory\Script.h" />
     <ClInclude Include="Memory\Snow.h" />
     <ClInclude Include="Memory\Vehicle.h" />
+    <ClInclude Include="Menus\PlayerMenu.h" />
     <ClInclude Include="MenuTexture.hpp" />
     <ClInclude Include="Natives\natives2.h" />
     <ClInclude Include="pch.h" />
