Move most menus into their own file * Remove extra menu code in KCMainMenu. * Moved vehicle menu into VehicleMenu file, teleport menu into TeleportMenu file. * Moved ped menu into PedMenu file, moved world menu into WorldMenu file.
* Added invincibility toggle for current vehicle.
* Make IMenuBuilder interface for other menu classes to use.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -150,6 +150,18 @@
     <ClCompile Include="Menus\PlayerMenu.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
+    <ClCompile Include="Menus\TeleportMenu.cpp">
+      <Filter>Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="Menus\VehicleMenu.cpp">
+      <Filter>Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="Menus\WorldMenu.cpp">
+      <Filter>Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="Menus\PedMenu.cpp">
+      <Filter>Menus</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -378,6 +390,21 @@
       <Filter>Scripting</Filter>
     </ClInclude>
     <ClInclude Include="Menus\PlayerMenu.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus\TeleportMenu.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus\VehicleMenu.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus\WorldMenu.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus\IMenuBuilder.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="Menus\PedMenu.h">
       <Filter>Menus</Filter>
     </ClInclude>
   </ItemGroup>
