--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -136,7 +136,11 @@
     <ClCompile Include="Memory\Memory.cpp" />
     <ClCompile Include="Menus\KCMainMenu.cpp" />
     <ClCompile Include="Menus\OldMenus.cpp" />
+    <ClCompile Include="Menus\PedMenu.cpp" />
     <ClCompile Include="Menus\PlayerMenu.cpp" />
+    <ClCompile Include="Menus\TeleportMenu.cpp" />
+    <ClCompile Include="Menus\VehicleMenu.cpp" />
+    <ClCompile Include="Menus\WorldMenu.cpp" />
     <ClCompile Include="MenuTexture.cpp" />
     <ClCompile Include="Natives\natives2.cpp" />
     <ClCompile Include="pch.cpp" />
@@ -210,7 +214,12 @@
     <ClInclude Include="Memory\Script.h" />
     <ClInclude Include="Memory\Snow.h" />
     <ClInclude Include="Memory\Vehicle.h" />
+    <ClInclude Include="Menus\IMenuBuilder.h" />
+    <ClInclude Include="Menus\PedMenu.h" />
     <ClInclude Include="Menus\PlayerMenu.h" />
+    <ClInclude Include="Menus\TeleportMenu.h" />
+    <ClInclude Include="Menus\VehicleMenu.h" />
+    <ClInclude Include="Menus\WorldMenu.h" />
     <ClInclude Include="MenuTexture.hpp" />
     <ClInclude Include="Natives\natives2.h" />
     <ClInclude Include="pch.h" />
