Updates to project * Rename Menyoo Tasks to Tasks_old.
* Add Tasks.cpp and Tasks.h.

Changes to PedScripts:
* Add CreatePed function, add DoesPedExist, DoesVehicleExist functions.
* Add some vehicle task functions, these are untested but should work.
* Add some weapon functions, these also work on the player.

PlayerMenu changes:
* Add tests for giving the player a weapon and attachment.

Clean up some files a bit, KCMainMenu.cpp, Enums.h.
Update TODO and add Natives.md for useful natives.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -205,11 +205,12 @@
     <ClCompile Include="Scripting\Raycast.cpp" />
     <ClCompile Include="Scripting\Rope.cpp" />
     <ClCompile Include="Scripting\Scaleform.cpp" />
-    <ClCompile Include="Scripting\Tasks.cpp" />
+    <ClCompile Include="Scripting\Tasks_old.cpp" />
     <ClCompile Include="Scripts\MiscScripts.cpp" />
     <ClCompile Include="Scripts\PedScripts.cpp" />
     <ClCompile Include="Scripts\PlayerScripts.cpp" />
     <ClCompile Include="Scripts\Player\PlayerNoClip.cpp" />
+    <ClCompile Include="Scripts\Tasks.cpp" />
     <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
     <ClCompile Include="Teleports\TeleportLocations.cpp" />
@@ -284,12 +285,13 @@
     <ClInclude Include="Scripting\Raycast.h" />
     <ClInclude Include="Scripting\Rope.h" />
     <ClInclude Include="Scripting\Scaleform.h" />
-    <ClInclude Include="Scripting\Tasks.h" />
+    <ClInclude Include="Scripting\Tasks_old.h" />
     <ClInclude Include="ScriptMenu.hpp" />
     <ClInclude Include="Scripts\MiscScripts.h" />
     <ClInclude Include="Scripts\PedScripts.h" />
     <ClInclude Include="Scripts\PlayerScripts.h" />
     <ClInclude Include="Scripts\Player\PlayerNoClip.h" />
+    <ClInclude Include="Scripts\Tasks.h" />
     <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
