Updates to project * Add Train station #1 and Train station #2 to teleport list.
VehicleScripts changes:
* Add test for creating a mission train, doesn't work and crashes so it's disabled in the menu.

TextScripts changes
* Add somewhat of a guide for how to use this.
* Add new SetTextEntry function which takes text, colorR, colorG, colorB, and colorA values.

PlayerScripts changes:
* Add mobile radio option

KCMenuScript.cpp changes:
* Add mobile radio option and flag to game tick.
* Add IdGun to game tick if enabled.

MiscScripts changes:
* Add entity ID gun from FiveM script, needs a bit of work.

VehicleMenu changes:
* Add test for creating a train, it crashes so I disabled it.

Add TrainModels to Enums.h
Add train station warps to teleport menu.
Add mobile radio toggle to player menu.

Added new MiscMenu.cpp and MiscMenu.h files, I will switch to these later from the old 'submenutest' menu.
Add common.h for some of my most used headers. in the project.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="Memory\Hooks\ScriptThreadRunHook.cpp" />
     <ClCompile Include="Memory\Memory.cpp" />
     <ClCompile Include="Menus\KCMainMenu.cpp" />
+    <ClCompile Include="Menus\MiscMenu.cpp" />
     <ClCompile Include="Menus\OldMenus.cpp" />
     <ClCompile Include="Menus\PedMenu.cpp" />
     <ClCompile Include="Menus\PlayerMenu.cpp" />
@@ -247,6 +248,7 @@
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\natives.h" />
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\types.h" />
     <ClInclude Include="..\thirdparty\simpleini\SimpleIni.h" />
+    <ClInclude Include="common.h" />
     <ClInclude Include="Components\KeyStates.h" />
     <ClInclude Include="Components\LuaManager.h" />
     <ClInclude Include="Components\LuaScripts_old.h" />
@@ -269,6 +271,7 @@
     <ClInclude Include="Memory\Snow.h" />
     <ClInclude Include="Memory\Vehicle.h" />
     <ClInclude Include="Menus\IMenuBuilder.h" />
+    <ClInclude Include="Menus\MiscMenu.h" />
     <ClInclude Include="Menus\PedMenu.h" />
     <ClInclude Include="Menus\PlayerMenu.h" />
     <ClInclude Include="Menus\TeleportMenu.h" />
