--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="Scripts\Tasks.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Menus\MiscMenu.cpp">
+      <Filter>Menus</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -413,6 +416,10 @@
     <ClInclude Include="Scripts\Tasks.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="Menus\MiscMenu.h">
+      <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
