Move some things around, update project
WorldMenu changes:
* Move most logic out of WorldMenu and into WorldScripts.
* Add toggle for fireworks around the player
* Add toggle for making the peds always calm.

PlayerScripts changes:
* Fix GetPlayerPed to use 'Ped' instead of 'int' data type.
* Remove extra variables that were assigned for player and playerID.

* Add GetPlayerStat function for an easier way to get the stat of the current player with my enum.
* Add GetCurrentPlayerModel function which shows which player is currently playing for the stats.

* Add GetCopsKilledStat, and GetCopsVehiclesBlownUpStat function.

* Add copsKilledBeforeDying int.
* Add IncrementCopsKilled, ResetCopsKilledBeforeDying, and GetCopsKilledBeforeDying functions for my new cop stat system.
* Add ProcessCopsKilled function which runs in the KCMenuScript game tick if toggled on.

Enums.h changes:
* Add PlayerModels enum and PlayerData struct
* Add a lot of enums from Menyoo for my menus.

PlayerMenu changes:
* Add Player Debug sub menu, only shows up in debug builds.
* Add logging for cops killed stat, cop vehicles blown up stat, and getting current player model.
* Add option to log cops killed this life, enables the ProcessCopsKilled function in the KCMenuScript game tick.

KCMenuScript.cpp changes:
* Add loop for displaying the cops killed counter on screen, for now this only shows in the game console.
* Add loop for fireworks around the player, and add loop for setting all peds in the area to be calm.

Added Player Debug submenu to KCMainMenu.cpp.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -214,6 +214,7 @@
     <ClCompile Include="Scripts\Tasks.cpp" />
     <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
+    <ClCompile Include="Scripts\WorldScripts.cpp" />
     <ClCompile Include="Teleports\TeleportLocations.cpp" />
     <ClCompile Include="Util\FileFunctions.cpp" />
     <ClCompile Include="Util\GTAmath.cpp" />
@@ -297,6 +298,7 @@
     <ClInclude Include="Scripts\Tasks.h" />
     <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
+    <ClInclude Include="Scripts\WorldScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
     <ClInclude Include="Teleports\TeleportLocations.h" />
     <ClInclude Include="Util\EntityIterator.h" />
