--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="Menus\MiscMenu.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
+    <ClCompile Include="Scripts\WorldScripts.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -420,6 +423,9 @@
       <Filter>Menus</Filter>
     </ClInclude>
     <ClInclude Include="common.h" />
+    <ClInclude Include="Scripts\WorldScripts.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
