Fix counter for cops killed
Cop counter changes:
* Fixed cops killed counter for displaying how many cops you have killed before getting wasted/busted.
* Now this shows up on the screen also.

Debug features added:
* Added changing position on screen of the cops killed stat.

PlayerScripts changes:
* Add text entry and text position funcitons to ProcessCopsKilled function.
* Label file a bit more, add two variables for X and Y of the menu position for the new display.

MiscScripts changes:
* Add DISPLAY_VEHICLE_NAME preprocessor for toggling this feature on/off in the id gun test.

Script.cpp changes:
* Add Memory.h for logging and displaying the current game build in the console.

KCMainMenu.cpp changes:
* Add tests for GTAV-Class with reclass

Other changes:
* Modify Memory.cpp to check for MinHook init.
* Update DllMain.cpp to run Memory::Init and Memory::Unint functions for MinHook.
* Add game build 3442 to main.h in ScriptHook.

* Added GTAV-Classes GitHub repo as a submodule for testing later.
* Update readme with credits

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/sol"]
 	path = thirdparty/sol
 	url = https://github.com/ThePhD/sol2.git
+[submodule "thirdparty/GTAV-Classes"]
+	path = thirdparty/GTAV-Classes
+	url = https://github.com/Mr-X-GTA/GTAV-Classes-1.git
